# 2D-Engine

./: .gitignore  .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Resources/shaders/: DefaultFragmentShader.shader  DefaultVertexShader.shader
Engine/include/: Camera.h  Camera2D.h  Component.h  Engine.h  GameObject.h  MethodCalls.h  Renderer.h  Scene.fwd.h  Scene.h  Shader.h  Static.h  Transform.h  Utils.h  Window.h  engine.h  shader.h  static.h  window.h
Engine/include/Components/: Component.h  Transform.h
Engine/include/Utils/: SceneManager.h
Engine/src/: Camera2D.cpp  Camera2D.cxx  Camera2D.ixx  Engine.cpp  Engine.cxx  Engine.ixx  GameObject.cpp  Mod.Engine.ixx  Scene.cpp  Shader.cpp  Window.cpp  Window.cxx  Window.ixx  engine.cpp  shader.cpp  window.cpp
Engine/src/Components/: Component.cpp  Component.ixx  Mod.Components.ixx  Transform.cpp  Transform.cxx  Transform.ixx
Engine/src/Graphics/: Mod.Graphics.ixx  Shader.cpp  Shader.cxx  Shader.ixx
Engine/src/Objetcs/: Component.ixx  Forward.ixx  GameObject.cpp  GameObject.cxx  GameObject.ixx  Mod.Objects.ixx  Scene.cpp  Scene.cxx  Scene.ixx
Engine/src/Utils/: Mod.Utils.ixx  SceneManager.cpp  SceneManager.cxx  SceneManager.ixx
TestGame/: CMakeLists.txt
TestGame/include/: Game.h  Main.h  game.h
TestGame/src/: Game.cpp  Game.ixx  Main.cpp  Main.cxx  game.cpp  main.cpp
TestGame/src/Components/: Mod.Components.ixx  TestComponent.ixx
TestGame/src/Scenes/: Mod.Scenes.ixx  TestScene.ixx
